# cpp-lambda

./: .gitignore  Dockerfile  README.md  run.sh  upload.sh
apigw/: main.cpp
dynamodb_test/: CMakeLists.txt  compile_commands.json  compile_flags.txt  create_table.cpp
sample/: CMakeLists.txt
sns_sample/: CMakeLists.txt  main.cpp
